--- a/public/style.css
+++ b/public/style.css
@@ -10,7 +10,7 @@ header{
 }
 
 footer{
-    position: absolute;
+    position: relative;
     text-align: center;
     bottom: 0;
     width: 100%;
@@ -22,4 +22,26 @@ img{
     width: 50%;
     height: 50%;
     margin: auto auto;
+}
+
+.note{  
+    background: whitesmoke;
+    border-radius: 7px;
+    padding: 10px;
+    width: 97%;
+    box-shadow: 0 2px 5px grey;
+    margin: 16px;
+    float: left;
+}   
+
+.note h3{
+    font-size: 1.1em;
+    margin-bottom: 6px;
+}
+
+.note p{
+    font-size: 1.1em;
+    margin-bottom: 10px;
+    white-space: pre-wrap;
+    word-wrap: break-word;
 }
